force-app/main/default/objects/Lead/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>Captures the Department Name for this Lead within their own Organization</description>
    <inlineHelpText>Indicates the Department Name for this Lead within their own Organization</inlineHelpText>
    <label>Department</label>
    <length>20</length>
    <type>Text</type>
</CustomField>