force-app/main/default/objects/Lead/fields/Full_Telephone__c.field-meta.xml
<CustomField>
    <fullName>Full_Telephone__c</fullName>
    <description>Concatenation of Telephone and Phone Ext # for this Lead.</description>
    <formula>IF(NOT(ISBLANK(Phone_Ext__c)),
Phone &amp; &quot;-&quot; &amp; TEXT(Phone_Ext__c ),
Phone
)</formula>
    <inlineHelpText>Concatenation of Telephone and Extention # for this Lead.</inlineHelpText>
    <label>Full Telephone</label>
    <type>Text</type>
</CustomField>