force-app/main/default/objects/Lead/fields/Phone_Ext__c.field-meta.xml
<CustomField>
    <fullName>Phone_Ext__c</fullName>
    <description>Captures Telephone Extention for this client (for Phone field)</description>
    <inlineHelpText>Indicates the Telephone Extention for this client (for Phone field)</inlineHelpText>
    <label>Phone Ext</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>