force-app/main/default/objects/Lead/fields/Product_s_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Product_s_of_Interest__c</fullName>
    <description>Captures the OSG products the lead is interested in.</description>
    <inlineHelpText>Indicates the OSG products the lead is interested in.</inlineHelpText>
    <label>Product(s) of Interest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>