force-app/main/default/objects/Lead/fields/Reason_for_No_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_No_Opportunity__c</fullName>
    <description>Captures the reason no sales opportunity is being created. Validation enforces when Status = Lead Qualified.</description>
    <inlineHelpText>Indicates the reason no sales opportunity is being created. Validation enforces when Status = Lead Qualified.</inlineHelpText>
    <label>Reason for No Opportunity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>