force-app/main/default/objects/Lead/fields/Toll_Free_Number__c.field-meta.xml
<CustomField>
    <fullName>Toll_Free_Number__c</fullName>
    <description>Captures any freefone number the Lead operates</description>
    <inlineHelpText>Indicates any freefone number the Lead operates</inlineHelpText>
    <label>Toll Free Number</label>
    <type>Phone</type>
</CustomField>