force-app/main/default/objects/Lead/validationRules/Lead_Owner_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Owner_Change</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(OwnerId),
not($User.Alias = &apos;aivan&apos;),
not($User.Alias = &apos;gthom&apos;),
not($User.Alias = &apos;slam&apos;),
not($User.Alias = &apos;bmath&apos;),
not($User.Alias = &apos;lcruz&apos;),
not($User.Alias = &apos;JMorr&apos;),
not($User.Alias = &apos;zbolt&apos;)
)</errorConditionFormula>
    <errorMessage>You do not have permission to change the owner of leads!</errorMessage>
</ValidationRule>